--- a/src/app.css
+++ b/src/app.css
@@ -517,7 +517,7 @@ input {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  background: #eee;
+  background: rgba(0, 0, 0, 0.62);
   color: #ffffff;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
